Style the calories info elements and the span inside the calories info div, adjusting the display, aligning the items to flex end, altering font weight, change margins, and fix bug withlabel div being inside header instead of wrapping around everything

--- a/learning/learning_07/styles.css
+++ b/learning/learning_07/styles.css
@@ -49,5 +49,38 @@ p {
     border: 0;
 }
 
+.small-text {
+    font-size: 0.85rem;
+}
+
+.calories-info h2 {
+    margin: 0;
+}
+
+.calories-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.calories-info span {
+    font-size: 2.4em;
+    font-weight: 700;
+    margin: -7px -2px;
+}
+
+.left-container p {
+    margin: -5px -2px;
+    font-size: 2em;
+    font-weight: 700;
+}
+
+
+.medium {
+    height: 5px;
+}
+
 
 /* rem stands for root em, and is relative to the font size of the html element  */
+
+/* 0.85rem in relation to the current html font size on line 12 of 16px calculates to roughly 13.6px */
